CSS/style.css
/*--------Couleur de l'association----------
#33ccff (for the blue)
#ff9900 (for the orange)
------------------------------------------*/

@font-face {
    font-family: BAUHS93;
    src: url(/font/BAUHS93.ttf) format("truetype");
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* ------------HEADER/NAV---------*/
header {
    position: fixed;
    width: 100%;
    z-index: 100;
}

.navLinkMenu {
    text-align: center;
    text-decoration: none;
    color: rgb(170, 170, 170);
    transition: all ease-out 0.5s;
    font-size: 20px;
}

.navLinkMenu:hover {
    color: #33ccff;
    transition: all 0.5s;
    border: 1px dashed #ff9900;
    border-radius: 3px;
}

.active-menu {
    color: #ff9900;
    transition: all 0.5s;
    padding: 3px;
    border-radius: 3px;
}


/*-----------Index page (accueil)----------*/
.banner-area {
    background-image: url(../images/chiendortdevice.jpg);
    background-size: cover;
    background-position: center center;
    height: 100%;
    width: 100%;
    position: fixed;
    z-index: -1;
    top: -15%;
}

.content-area {
    width: 100%;
    height: 100%;
    position: relative;
    background-color: aliceblue;
    top: 450px;
    overflow: hidden;
}

.banner-area p {
    position: absolute;
    top: 30%;
    padding-left: 15%;
    color: aliceblue;
}

@media screen and (min-width: 600px) {
    .content-area {
        top: 600px;
    }
    .banner-area {
        background-image: url(../images/chiendort.jpg);
        background-position: left center;
    }
    .banner-area p {
        padding-left: 30%;
    }

}

/*----------- ALL PAGES----------- */
h1,
h2,
h3 {
    color: #ff9900;
    font-family: BAUHS93;
    position: relative;
    z-index: 3;
}

h1::before {
    content: url(/images/logo.png);
    width: 50px;
    height: 50px;
    display: inline-flex;
    top: 0;
    left: 0;
}

.blue-item {
    color: #33ccff;
}

/*------------- Logo Facebook (fot the footer and contact page) ---------*/
.bulle {
    width: 60px;
    height: 60px;
    border-radius: 50%;
    border: 1px solid #f1f1f1;
    display: inline-block;
    justify-content: center;
    align-items: center;
    margin: 10px 0;
    background: #f1f1f1;
    cursor: pointer;
    position: relative;
}

